--- a/primary/rent-control-compresses-controlled-rents-but-raises-uncontrolled-rents.qmd
+++ b/primary/rent-control-compresses-controlled-rents-but-raises-uncontrolled-rents.qmd
@@ -10,7 +10,7 @@ In a meta-study, [rent control](../aggregators/rent-control.qmd) was found to be
 
 # Details
 
-Kholodilin found that **36 of 41 published studies** show a statistically significant *negative* effect of rent control on controlled rents (i.e., regulated rents are lower than they otherwise would be), ranging from **−57% to −1%**. For rents in the uncontrolled segment, about **65% of published studies** find a statistically significant *positive* effect (uncontrolled rents rise), **~26%** find no statistically significant effect, and **~8%** find a negative effect, with a range of **−2% to +14.8%** [@Kholodilin2024].
+The author of the meta-review found that **36 of 41 published studies** show a statistically significant *negative* effect of rent control on controlled rents (i.e., regulated rents are lower than they otherwise would be), ranging from **−57% to −1%**. For rents in the uncontrolled segment, about **65% of published studies** find a statistically significant *positive* effect (uncontrolled rents rise), **~26%** find no statistically significant effect, and **~8%** find a negative effect, with a range of **−2% to +14.8%** [@Kholodilin2024].
 
 # See Also
 
