--- a/bibliography.bib
+++ b/bibliography.bib
@@ -82,3 +82,14 @@
   doi = {10.1080/14036096.2015.1053981},
   url = {https://doi.org/10.1080/14036096.2015.1053981}
 }
+
+@techreport{FangKimTyndall2025,
+  author = {Limin Fang and Emi Kim and Justin Tyndall},
+  title = {The Downmarket Impact of New Multifamily Housing: Evidence from a Honolulu Condo Tower},
+  institution = {University of Hawai'i Economic Research Organization (UHERO)},
+  type = {Working Paper},
+  number = {2025-3},
+  year = {2025},
+  month = {November},
+  url = {https://uhero.hawaii.edu/wp-content/uploads/2025/11/UHEROwp2503.pdf}
+}
